--- a/frontend/src/common/header/Header.css
+++ b/frontend/src/common/header/Header.css
@@ -49,7 +49,7 @@
     to {
         transform: rotateY(0deg);
     }
-}
+}  
 
 .login_logout_button{
     float: right;
@@ -66,6 +66,7 @@
 }
 
 .model{
+    background-color: white;
     position: fixed;
     width: 360px;
     top: 50%;
@@ -74,4 +75,6 @@
     text-align: center;
     transform: translate(-50%, -50%);
     border:1px solid;
+    
   }
+
